# MediScribe-AI

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py  websocket_handler.py
backend/app/models/: prompts.py  schemas.py
backend/app/services/: llm_service.py  nlp_service.py  session_manager.py  stt_service.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: app.tsx  index.css
frontend/src/components/: ContextPanel.tsx  QuestionPanel.tsx  SummaryModal.tsx  TranscriptView.tsx
frontend/src/hooks/: useAudioCapture.ts  useGeminiLive.ts  useWebSocket.ts
frontend/src/pages/: LandingPage.tsx  RecordingPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: appStore.ts
frontend/src/types/: index.ts
