[project]
name = "mediscribe-ai-backend"
version = "1.0.0"
description = "MediScribe AI - Clinical Documentation Assistant Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "fastapi==0.115.5",
    "google-genai==1.22.0",
    "numpy>=1.26.0,<2.0.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "scikit-learn==1.5.2",
    "scispacy==0.5.5",
    "sentence-transformers==3.3.1",
    "spacy==3.7.6",
    "uvicorn[standard]==0.34.0",
    "websockets==14.1",
]
